compiler/testData/asJava/lightClasses/compilationErrors/RepetableAnnotations.java
public final class Annotations /* p.Annotations*/ {
  @p.R(s = "a")
  @p.R(s = "b")
  @p.R(s = "c")
  public final void repeatables1();//  repeatables1()

  @p.R(s = "a")
  @p.R(s = "c")
  @p.R(s = "f")
  @p.S(g = "D")
  @p.S(g = "b")
  public final void repeatables3();//  repeatables3()

  @p.R(s = "a")
  public final void repeatables2();//  repeatables2()

  public  Annotations();//  .ctor()

}